dynamically_typed_tests/invalid/variables/caseMatters.wacc
# variable names are case sensitive

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin

  number = 42 ;
  println NUMBER
  
end
